# longfellow-rs

./: CI_NOTES.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RISCV32_REMAINING_ERRORS.md  UPSTREAM.md  deny.toml
benches/: extend.rs  field.rs  longfellow_one_field.rs  mdoc_zk.rs  ntt.rs
circuits/: mdoc_circuit_v12.bin.zst  p7s_circuit_v12.bin.zst
examples/: wasm_p7s_mem.rs
js/: error.js
src/: circuit.rs  circuit_data.rs  ffi_api.rs  io.rs  js_api.rs  lib.rs  test_vector.rs  transcript.rs  witness.rs  zk_one_circuit.rs
src/fields/: README.md  codegen_addchain.sh  codegen_fiat_crypto.sh  extend_p.rs  fieldp256_2.rs  find_addition_chains.sh  mod.rs  ntt.rs  quadratic_extension.rs
src/fields/addition_chains/: gf_2_128_m2.acc  gf_2_128_m2.rs  mod.rs  p128m2.acc  p128m2.rs  p256_scalar_m2.rs  p256m2.acc  p256m2.rs  p256sqrt.acc  p256sqrt.rs  template.txt
src/fields/field2_128/: backend_aarch64.rs  backend_bit_slicing.rs  backend_naive_loop.rs  backend_x86.rs  constants.rs  constants.sage  extend.rs  mod.rs
src/fields/fieldp128/: mod.rs  ops.rs
src/fields/fieldp256/: mod.rs  ops.rs
src/fields/fieldp256_scalar/: mod.rs  ops.rs
src/ligero/: merkle.rs  mod.rs  proof.rs  prover.rs  tableau.rs  verifier.rs
src/mdoc_zk/: bit_plucker.rs  circuit_interface.md  ec.rs  layout.rs  mod.rs  prover.rs  sha256.rs  stateless.rs  verifier.rs
src/mdoc_zk/mdoc/: cose.rs  mod.rs
src/p7s_zk/: PORTING_PLAN_ITEMS_3_5.md  ecdsa_witness.rs  invariants.rs  layout.rs  mac.rs  mac_witness.rs  mod.rs  params.rs  parser.rs  preimages.rs  proof.rs  prover.rs  public_inputs.rs  sha256_witness.rs  stateless.rs  trust_anchors.rs  verifier.rs  witness.rs  witness_fill.rs
src/sumcheck/: mod.rs
src/sumcheck/bind/: mod.rs  sparse.rs  test_vector.rs
src/sumcheck/constraints/: mod.rs
src/zk_one_circuit/: proof.rs  prover.rs  verifier.rs
test-vectors/: README.md
test-vectors/bind/: dense_1d_array_bind_Field2_128.json  dense_1d_array_bind_FieldP128.json  dense_1d_array_bind_FieldP256.json  sparse_2d_array_bind_Field2_128.json  sparse_2d_array_bind_FieldP128.json  sparse_2d_array_bind_FieldP256.json  sparse_3d_array_bind_Field2_128.json  sparse_3d_array_bind_FieldP128.json  sparse_3d_array_bind_FieldP256.json
test-vectors/mdoc_zk/: v6_v7_1attr_issue_date.json
test-vectors/one-circuit/: longfellow-mac-circuit-66aeaf09a9cc98e36873e868307ac07279d5f7e0-1.circuit.zst  longfellow-mac-circuit-66aeaf09a9cc98e36873e868307ac07279d5f7e0-1.json  longfellow-mac-circuit-66aeaf09a9cc98e36873e868307ac07279d5f7e0-1.ligero-proof  longfellow-mac-circuit-66aeaf09a9cc98e36873e868307ac07279d5f7e0-1.sumcheck-proof  longfellow-rfc-1-87474f308020535e57a778a82394a14106f8be5b.circuit.zst  longfellow-rfc-1-87474f308020535e57a778a82394a14106f8be5b.json  longfellow-rfc-1-87474f308020535e57a778a82394a14106f8be5b.ligero-proof  longfellow-rfc-1-87474f308020535e57a778a82394a14106f8be5b.sumcheck-proof
tests/: fixtures.rs  mdoc_zk_v12_round_trip.rs  p7s_zk_circuit_decode.rs  p7s_zk_parser.rs  p7s_zk_round_trip.rs
tests/fixtures/: README.md
tests/fixtures/p7s/: testanchor-a-binding-v12.qkb.p7s
tests/fixtures/p7s/reference/: hu-microsec-mic-1.p7s
tests/fixtures/p7s_zk/: p7s_circuit_v12.bin.zst
wasm-harness/: README.md  index.html  wasm_mem_run.mjs  worker.js
