[package]
name = "longfellow"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

# Feature matrix (see README.md):
#   default  = prover + verifier + std (host build, full functionality)
#   verifier = verifier-only path (no prover deps, no_std + alloc compatible)
#   prover   = prover-side modules + zstd + rand + getrandom
#   std      = std-library imports (off → no_std + alloc only)
#   wasm     = wasm-bindgen surface for browser builds
#   mobile   = uniffi scaffolding for mobile builds
[features]
default = ["prover", "verifier", "std"]
verifier = []
prover = ["dep:rand", "dep:getrandom", "dep:zstd"]
std = []
wasm = ["dep:wasm-bindgen"]
mobile = ["dep:uniffi"]

[dependencies]
# Deps default-feature-off where the upstream offers a no_std-friendly subset of
# what we use, so the verifier-only build under follow-up task #94 (1.2b2) can
# target riscv32im. `std` opt-ins for the host build are layered back on via
# the workspace `std` feature (see [features] above). Deps that genuinely need
# their default features for our usage (e.g. `anyhow` formatter helpers) stay
# at defaults; switching them is part of the #94 dep-audit.
aes = "0.8.4"  # `default-features = false` deferred to #94 — strips `InvalidLength: std::error::Error` that `anyhow::Context` needs
anyhow = "1"
byteorder = "1.5.0"  # `default-features = false` deferred to #94 — flipping it strips ReadBytesExt/WriteBytesExt which the Codec trait still uses
ciborium = "0.2.2"
ciborium-ll = "0.2.2"
crypto-common = { version = "0.1.6", features = ["std"] }  # explicit `std` because flipping sha2/aes defaults dropped it from feature-unification, and `anyhow::Context` needs `InvalidLength: std::error::Error`
educe = { version = "0.6.0", features = ["Debug", "Clone", "Copy", "Hash", "Default"] }  # `default-features = false` deferred to #94 — drops `PartialEq` derive used by SparseSumcheckArray
getrandom = { version = "0.3.3", optional = true, features = ["wasm_js"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
num-bigint = { version = "0.4.6", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
rand = { version = "0.9.2", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
sha2 = { version = "0.10.9", default-features = false }
static_assertions = "1.1.0"
subtle = { version = "2.6.1", default-features = false, features = ["const-generics", "i128"] }
uniffi = { version = "0.31.0", optional = true, features = ["cli"] }
wasm-bindgen = { version = "0.2.106", optional = true }
x509-cert = { version = "0.2.5", default-features = false, features = ["hazmat", "std"] }
zstd = { version = "0.13.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
criterion = { version = "0.8.0", default-features = false }

[dev-dependencies]
assert_matches = "1.5.0"
git-version = "0.3.9"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "1.1.0"
num-traits = "0.2.19"
rand_chacha = "0.9.0"
serde_json = "1.0"
serde_test = "1.0.177"
sha2 = "0.10.9"
wasm-bindgen-test = "0.3"

[[bench]]
name = "extend"
harness = false

[[bench]]
name = "field"
harness = false

[[bench]]
name = "longfellow_one_field"
harness = false

[[bench]]
name = "mdoc_zk"
harness = false

[[bench]]
name = "ntt"
harness = false

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["mobile"]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[profile.release]
lto = true
