[package]
name = "longfellow"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

# Feature matrix (see README.md):
#   default  = prover + verifier + std (host build, full functionality)
#   verifier = verifier-only path (no prover deps, no_std + alloc compatible)
#   prover   = prover-side modules + ruzstd + rand + getrandom
#   std      = std-library imports (off → no_std + alloc only)
#   wasm     = wasm-bindgen surface for browser builds
#   mobile   = uniffi scaffolding for mobile builds
[features]
default = ["prover", "verifier", "std"]
verifier = []
prover = ["dep:rand", "dep:getrandom", "dep:ruzstd", "dep:ciborium", "dep:ciborium-ll", "dep:x509-cert", "x509-cert/hazmat"]
std = ["x509-cert?/std"]
wasm = ["dep:wasm-bindgen"]
mobile = ["dep:uniffi"]

[dependencies]
# Verifier-path deps stay no_std-friendly (`default-features = false` where
# applicable) so the SP1 / `riscv32im-unknown-none-elf` build stays green under
# `--features verifier --no-default-features`. CBOR/X.509 parsing live in the
# prover-only `mdoc/` and `p7s/` parsers, so `ciborium`/`ciborium-ll`/`x509-cert`
# are gated through the `prover` feature.
aes = { version = "0.8.4", default-features = false }
anyhow = { version = "1", default-features = false }
byteorder = { version = "1.5.0", default-features = false }
ciborium = { version = "0.2.2", optional = true }
ciborium-ll = { version = "0.2.2", optional = true }
crypto-common = { version = "0.1.6", default-features = false }
educe = { version = "0.6.0", default-features = false, features = ["Debug", "Clone", "Copy", "Hash", "Default", "PartialEq", "Eq"] }
getrandom = { version = "0.3.3", optional = true, features = ["wasm_js"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
num-bigint = { version = "0.4.6", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
rand = { version = "0.9.2", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
sha2 = { version = "0.10.9", default-features = false }
static_assertions = "1.1.0"
subtle = { version = "2.6.1", default-features = false, features = ["const-generics", "i128"] }
uniffi = { version = "0.31.0", optional = true, features = ["cli"] }
wasm-bindgen = { version = "0.2.106", optional = true }
x509-cert = { version = "0.2.5", default-features = false, optional = true }
# Pure-Rust zstd *decoder* (decode-only, the prover never compresses). Replaces
# the C-backed `zstd` crate so `--features prover` builds for
# `wasm32-unknown-unknown` and other toolchains without a C compiler.
ruzstd = { version = "0.7.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }
# `tests/fixtures.rs` and `src/test_vector.rs` decode zstd-compressed circuit
# binaries on the host. The C-backed `zstd` crate is fine for host test runs
# but breaks any `wasm32` build (no C toolchain), so this dev-dep is gated off
# wasm targets — those tests do not run on wasm anyway.
zstd = "0.13.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
criterion = { version = "0.8.0", default-features = false }

[dev-dependencies]
assert_matches = "1.5.0"
git-version = "0.3.9"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "1.1.0"
num-traits = "0.2.19"
rand_chacha = "0.9.0"
serde_json = "1.0"
serde_test = "1.0.177"
sha2 = "0.10.9"
wasm-bindgen-test = "0.3"

[[bench]]
name = "extend"
harness = false

[[bench]]
name = "field"
harness = false

[[bench]]
name = "longfellow_one_field"
harness = false

[[bench]]
name = "mdoc_zk"
harness = false

[[bench]]
name = "ntt"
harness = false

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["mobile"]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[profile.release]
lto = true
